--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -240,6 +240,9 @@ set(msg_files
 	VehicleThrustSetpoint.msg
 	VehicleTorqueSetpoint.msg
 	VelocityLimits.msg
+	Vtx.msg
+	# VtxAuxMap.msg
+	# VtxTable.msg
 	WheelEncoders.msg
 	YawEstimatorStatus.msg
 	versioned/ActuatorMotors.msg
