--- a/.github/workflows/ci-orchestrator.yml
+++ b/.github/workflows/ci-orchestrator.yml
@@ -186,9 +186,9 @@ jobs:
   basic-tests:
     name: Basic Tests [${{ matrix.check }}]
     needs: [gate-checks, shellcheck, mavsdk-python-checks, build-sitl]
-    runs-on: ubuntu-latest
+    runs-on: [runs-on,runner=4cpu-linux-x64,image=ubuntu24-full-x64,"run-id=${{ github.run_id }}",spot=false]
     container:
-      image: ghcr.io/px4/px4-dev:v1.16.0
+      image: px4io/px4-dev:v1.16.0
     strategy:
       fail-fast: true
       matrix:
@@ -198,6 +198,8 @@ jobs:
           "module_documentation"
         ]
     steps:
+      - uses: runs-on/action@v2
+
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
