--- a/.github/workflows/ci-orchestrator.yml
+++ b/.github/workflows/ci-orchestrator.yml
@@ -679,6 +679,11 @@ jobs:
     steps:
       - uses: runs-on/action@v2
 
+      - name: Install Node v20.18.0
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.18.0
+
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
@@ -686,24 +691,17 @@ jobs:
       - name: Git ownership workaround
         run: git config --system --add safe.directory '*'
 
-      - name: Cache emsdk
-        uses: actions/cache@v4
-        with:
-          path: emsdk
-          key: emsdk-3.1.50-${{ runner.os }}
-
-      - name: Setup emsdk
+      - name: Install emscripten
         run: |
-          if [ ! -d "emsdk" ]; then
-            git clone https://github.com/emscripten-core/emsdk.git
-          fi
-          cd emsdk
-          ./emsdk install 3.1.50
-          ./emsdk activate 3.1.50
+          git clone https://github.com/emscripten-core/emsdk.git _emscripten_sdk
+          cd _emscripten_sdk
+          git checkout 4.0.15
+          ./emsdk install latest
+          ./emsdk activate latest
 
       - name: Build failsafe_web
         run: |
-          . emsdk/emsdk_env.sh
+          . ./_emscripten_sdk/emsdk_env.sh
           make failsafe_web
 
   # ═══════════════════════════════════════════════════════════════════
